<resources>
    <string name="app_name">ChatProject</string>
    <string name="welcome_back">Welcome back</string>
    <string name="login_to_continue">Login to continue</string>
    <string name="enter_email">Enter email</string>
    <string name="enter_password">Enter password</string>
    <string name="sign_in">Sign in</string>
    <string name="create_new_account">Create new account</string>
    <string name="add_image">Add Image</string>
    <string name="enter_name">Enter name</string>
    <string name="enter_confirm_password">Enter confirm password</string>
    <string name="sign_up">Sign Up</string>
    <string name="select_user">Select user</string>
    <string name="type_a_message">Type a message</string>
    <string name="online">Online</string>
</resources>