<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="false"
    android:overScrollMode="never"
    android:padding="@dimen/sp_24"
    android:scrollbars="none"
    tools:context=".activities.SignInActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/sp_40"
            android:text="@string/welcome_back"
            android:textColor="@color/primary_text"
            android:textSize="@dimen/_18ssp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_4ssp"
            android:text="@string/login_to_continue"
            android:textColor="@color/secondary_text"
            android:textSize="@dimen/_12ssp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/edit_text_email"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:layout_marginTop="@dimen/_40sdp"
            android:background="@color/input_background"
            android:hint="@string/enter_email"
            android:imeOptions="actionNext"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress"
            android:paddingStart="@dimen/_16sdp"
            android:paddingEnd="@dimen/_16sdp"
            android:textColor="@color/primary_text"
            android:textSize="@dimen/_13ssp" />

        <EditText
            android:id="@+id/edit_text_password"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:layout_marginTop="@dimen/_40sdp"
            android:background="@color/input_background"
            android:hint="@string/enter_password"
            android:imeOptions="actionDone"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:paddingStart="@dimen/_16sdp"
            android:paddingEnd="@dimen/_16sdp"
            android:textColor="@color/primary_text"
            android:textSize="@dimen/_13ssp" />
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_marginTop="@dimen/_8sdp"
            android:layout_height="wrap_content">
            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_sign_in"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_50sdp"
                android:text="@string/sign_in"
                android:textColor="@color/white"
                android:textSize="@dimen/_13ssp"
                android:textStyle="bold"
                app:cornerRadius="@dimen/_8sdp" />
            <ProgressBar
                android:id="@+id/progress_bar_sign_in"
                android:layout_width="@dimen/_25sdp"
                android:layout_gravity="center"
                android:visibility="visible"
                android:layout_height="@dimen/_25sdp"/>
        </FrameLayout>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_30sdp"
            android:text="@string/create_new_account"
            android:textColor="@color/primary"
            android:textSize="@dimen/_13ssp"
            android:id="@+id/text_view_create_new_account"
            android:textStyle="bold" />


    </LinearLayout>
</ScrollView>
